<resources>
    <string name="app_name">DigiPay</string>
    <string name="hello_world">Hello World..!</string>
    <string name="signout">Successfully SignedOut..</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">home</string>
    <string name="history">history</string>
    <string name="chat_pay"><![CDATA[chat & pay]]></string>
    <string name="notification">notification</string>
    <string name="profile">profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="userdb">Users</string>
</resources>
