<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@id/home"
    android:title="@string/home"
    android:icon="@drawable/ic_home_black_24dp"
    />
        <item
            android:id="@id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_history_black_24dp"
            />

        <item
            android:id="@+id/chat"
            android:title="@string/chat_pay"
            android:icon="@drawable/ic_chat_black_24dp"
            />

        <item
            android:id="@+id/notification"
            android:title="@string/notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            />

        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            />

</menu>